# OpenGL-Experiments

./: .gitignore  CMakeLists.txt  MyCamera.h  MyShaderLoader.h  README.md  glad.c  main.cpp  stb_image.cpp
Shaders/: tri_shader.fs  tri_shader.vs
